--- a/index.html
+++ b/index.html
@@ -7,32 +7,8 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     <title>Flappy Bird</title>
 </head>
-<body class="body">
-    <header class="header">
-        <canvas class="game-header" width="324" height="55"></canvas>
-    </header>
-    <main class="main">
-        <canvas class="game" width="322" height="482"></canvas>
-    </main>
-    <footer class="footer">
-        
-    </footer>
-    <script src="js/config.js"></script>
-    <script src="js/entities/base.js"></script>
-    <script src="js/entities/bird.js"></script>
-    <script src="js/entities/background.js"></script>
-    <script src="js/entities/pipes.js"></script>
-    <script src="js/entities/floor.js"></script>
-    <script src="js/entities/initialDisplay.js"></script>
-    <script src="js/entities/endDisplay.js"></script>
-    <script src="js/entities/startBtn.js"></script>
-    <script src="js/entities/score.js"></script>
-    <script src="js/entities/medal.js"></script>
-    <script src="js/drawEngine.js"></script>
-    <script src="js/physicsEngine.js"></script>
-    <script src="js/inputHandler.js"></script>
-    <script src="js/resources.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/index.js"></script>
+<body>
+    <div id="root"></div>
+    <canvas class="game" width="322" height="482"></canvas>
 </body>
 </html>
