project_flappy-bird: refactored controlEngine class and universalized delta

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <!-- PhysicsEngine -->
         <script src="./src/components/Game/engines/physicsEngine.js"></script>
 
-        <!-- DeviceInputHandler -->
-        <script src="./src/components/Game/devices/deviceInputHandler.js"></script>
+        <!-- ControlEngine -->
+        <script src="./src/components/Game/engines/controlEngine.js"></script>
 
         <!-- BaseEntity -->
         <script src="./src/components/Game/entities/baseEntity.js"></script>
