project_flappy-bird: added background and floor entities

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <!-- BaseEntity -->
         <script src="./src/components/Game/entities/baseEntity.js"></script>
 
+        <!-- Floor -->
+        <script src="./src/components/Game/entities/floor.js"></script>
+
         <!-- Bird -->
         <script src="./src/components/Game/entities/bird.js"></script>
 
