project_flappy-bird: added pipe class and pipe animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Constants and Utils -->
     <script src="./src/constants/root.js"></script>
+    <script src="./src/utils/random.js"></script>
 
         <!-- Game components -->
 
@@ -34,6 +35,12 @@
 
         <!-- Floor -->
         <script src="./src/components/Game/entities/floor.js"></script>
+
+        <!-- Pipe -->
+        <script src="./src/components/Game/entities/pipe.js"></script>
+
+        <!-- Pipes -->
+        <script src="./src/components/Game/entities/pipeMaker.js"></script>
 
         <!-- Bird -->
         <script src="./src/components/Game/entities/bird.js"></script>
