project_flappy-bird: added class Score with processing of logic of behavior of score counting

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Constants and Utils -->
     <script src="./src/constants/root.js"></script>
     <script src="./src/utils/random.js"></script>
+    <script src="./src/utils/localStorageUtil.js"></script>
 
         <!-- Game components -->
 
@@ -32,6 +33,9 @@
 
         <!-- BaseEntity -->
         <script src="./src/components/Game/entities/baseEntity.js"></script>
+
+        <!-- Score -->
+        <script src="./src/components/Game/entities/score.js"></script>
 
         <!-- Floor -->
         <script src="./src/components/Game/entities/floor.js"></script>
