project_flappy-bird: layout completed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./src/assets/images/svg/favicon.svg">
     <link rel="stylesheet" href="./src/css/index.css">
     <title>Flappy Bird</title>
 </head>
@@ -51,6 +52,10 @@
 
         <!-- Game -->
         <script src="./src/components/Game/game.js"></script>
+
+    <!-- Logo -->
+    <script src="./src/components/Logo/logo.js"></script>
+    <link rel="stylesheet" href="./src/components/Logo/logo.css">
 
     <!-- Header -->
     <script src="./src/components/Header/header.js"></script>
